# Switchyard

./: .gitignore  ARCHITECTURE.md  DEMO.md  MASTER_PROMPT.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
data/: esci_sample.jsonl
deploy/k3s/: switchyard.yaml
docs/blog/: adaptive-search-router.md
experiments/: phase0_gate.py  phase2_learned_router.py
monitoring/: prometheus.yml
opensearch/: product-index.json
results/: phase0_route_log.csv  router_model.json
scripts/: demo.sh  index_opensearch.py  load_test.js  prepare_esci.py
serving/: Dockerfile  go.mod  main.go
site/: index.html  router_model.json
src/switchyard/: __init__.py  acquisition.py  dense.py  esci.py  features.py  fusion.py  index.py  learned_router.py  metrics.py  router.py  routes.py  stats.py  text.py  utility.py
tests/: test_acquisition.py  test_esci.py  test_learned_router.py  test_metrics.py  test_router.py  test_routes.py  test_stats.py
